--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,13 +8,27 @@
     <dimen name="sp_16">16sp</dimen>
     <dimen name="sp_14">14sp</dimen>
     <dimen name="sp_12">12sp</dimen>
+    <dimen name="sp_10">10sp</dimen>
 
+    <dimen name="dp_140">140dp</dimen>
+    <dimen name="dp_120">120dp</dimen>
+    <dimen name="dp_100">100dp</dimen>
+    <dimen name="dp_80">80dp</dimen>
+    <dimen name="dp_60">60dp</dimen>
+    <dimen name="dp_40">40dp</dimen>
     <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_18">18dp</dimen>
     <dimen name="dp_16">16dp</dimen>
     <dimen name="dp_14">14dp</dimen>
     <dimen name="dp_12">12dp</dimen>
     <dimen name="dp_10">10dp</dimen>
-
+    <dimen name="dp_8">8dp</dimen>
+    <dimen name="dp_6">6dp</dimen>
+    <dimen name="dp_5">5dp</dimen>
+    <dimen name="dp_4">4dp</dimen>
+    <dimen name="dp_2">2dp</dimen>
+    <dimen name="dp_1">1dp</dimen>
+    <dimen name="dp_05">0.5dp</dimen>
+    <dimen name="dp_0">0dp</dimen>
 
 </resources>
