--- a/app/src/main/res/menu/navigation_bottom.xml
+++ b/app/src/main/res/menu/navigation_bottom.xml
@@ -8,16 +8,16 @@
 
     <item
             android:id="@+id/wechat"
-            android:icon="@drawable/ic_notifications_black_24dp"
+            android:icon="@drawable/ic_wechat"
             android:title="@string/wechat"/>
 
     <item
             android:id="@+id/project"
-            android:icon="@drawable/ic_notifications_black_24dp"
+            android:icon="@drawable/ic_project"
             android:title="@string/project"/>
     <item
             android:id="@+id/navigation"
-            android:icon="@drawable/ic_notifications_black_24dp"
+            android:icon="@drawable/ic_navigation"
             android:title="@string/navigation"/>
 
     <item
