--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -16,6 +16,15 @@
             android:layout_height="match_parent">
 
         <TextView
+                android:id="@+id/author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/app_name"
+                app:layout_constraintStart_toStartOf="parent"
+                android:textSize="@dimen/sp_12"/>
+
+        <TextView
                 android:id="@+id/on_top"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -24,8 +33,9 @@
                 android:text="@string/on_top"
                 android:textColor="@color/Red"
                 android:textSize="@dimen/sp_10"
+                android:layout_marginStart="@dimen/dp_10"
                 app:layout_constraintBottom_toBottomOf="@+id/author"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@id/author"
                 app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
@@ -38,21 +48,9 @@
                 android:textColor="@color/Red"
                 android:textSize="@dimen/sp_10"
                 android:layout_marginStart="@dimen/dp_10"
-                app:layout_goneMarginStart="@dimen/dp_0"
                 app:layout_constraintBottom_toBottomOf="@+id/author"
                 app:layout_constraintStart_toEndOf="@id/on_top"
                 app:layout_constraintTop_toTopOf="parent"/>
-
-        <TextView
-                android:id="@+id/author"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="@string/app_name"
-                android:layout_marginStart="@dimen/dp_10"
-                app:layout_goneMarginStart="@dimen/dp_0"
-                android:textSize="@dimen/sp_12"
-                app:layout_constraintStart_toEndOf="@+id/fresh"/>
 
         <TextView
                 android:id="@+id/date"
