--- a/app/src/main/res/layout/refresh_layout.xml
+++ b/app/src/main/res/layout/refresh_layout.xml
@@ -14,6 +14,6 @@
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listItem="@layout/home_item"
-            android:scrollbars="none"/>
+            android:scrollbars="vertical"/>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
