--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="sp_12">12sp</dimen>
     <dimen name="sp_10">10sp</dimen>
 
+    <dimen name="dp_180">180dp</dimen>
     <dimen name="dp_140">140dp</dimen>
     <dimen name="dp_120">120dp</dimen>
     <dimen name="dp_100">100dp</dimen>
