合并显示多个权限申请理由

--- a/app/src/main/res/menu/menu_activity_main.xml
+++ b/app/src/main/res/menu/menu_activity_main.xml
@@ -5,7 +5,7 @@
     <item
             android:id="@+id/scan"
             android:icon="@drawable/ic_scan"
-            android:title="@string/scan_result"
+            android:title="@string/scan"
             app:showAsAction="always|collapseActionView"/>
 
     <item
