--- a/app/src/main/res/layout/fragment_tab_vp.xml
+++ b/app/src/main/res/layout/fragment_tab_vp.xml
@@ -1,28 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<com.classic.common.MultipleStatusView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/multiple_status_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/viewBackground">
-
-    <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabLayout"
+        android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@color/colorPrimary"
-            android:theme="@style/AppTheme.AppBarOverlay"
-            app:tabGravity="center"
-            app:tabIndicatorColor="@color/White"
-            app:tabIndicatorHeight="@dimen/dp_2"
-            app:tabMode="scrollable"/>
+            android:layout_height="match_parent"
+            android:background="@color/viewBackground">
 
-    <androidx.viewpager.widget.ViewPager
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/tabLayout"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                android:background="@color/colorPrimary"
+                android:theme="@style/AppTheme.AppBarOverlay"
+                app:tabGravity="center"
+                app:tabIndicatorColor="@color/White"
+                app:tabIndicatorHeight="@dimen/dp_2"
+                app:tabMode="scrollable"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.viewpager.widget.ViewPager
+                android:id="@+id/viewPager"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@id/tabLayout"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</com.classic.common.MultipleStatusView>
